# agent-radar

./: .gitignore  LICENSE  README-ZH-TW.md  README.md  SKILL.md  SPEC-usage-telemetry.md  pyproject.toml  report.en.html  report.html  report.py  report.zh.html  sample-scan.json  scanner.py  session_scanner.py
.github/scripts/: daily_issue_triage.py
.github/workflows/: ci.yml  release.yml
agent_radar/: __init__.py  __main__.py  cli.py  i18n.py  install_skill.py  report.py  scanner.py  session_scanner.py
agent_radar/_skill_template/agent-radar-coach/: SKILL.md
agent_radar/_skill_template/agent-radar-feedback/: SKILL.md
agent_radar/usage/: __init__.py  __main__.py  merge.py  usage_score.py
agent_radar/usage/collectors/: __init__.py  base.py  otlp_file.py
fixtures/: merged-rich.json  scan-rich.json  usage-rich.json
tests/: test_cli.py  test_install_skill.py  test_merge.py  test_otlp_file.py  test_scanner.py  test_session_scanner.py  test_usage_score.py
usage/: __init__.py  __main__.py  merge.py  usage_score.py
usage/collectors/: base.py
